// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render App component 1`] = `
<div
  className="App"
>
  <div
    id="BrowserRouter"
  >
    <div>
      Routes
    </div>
  </div>
</div>
`;

exports[`App should render a loading screen as a fallback 1`] = `
<div
  className="App"
>
  <div
    id="BrowserRouter"
  >
    <div
      id="LoadingScreen"
    />
  </div>
</div>
`;
